[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobpy"
version = "0.1.0"
description = "Limit Order Book in Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Mattia"}
]
keywords = ["limit order book", "lob", "trading", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
 dependencies = [
    "sortedcontainers>=2.4.0",
 ]

[project.optional-dependencies]
export = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyarrow>=7.0.0",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/mattermat/lob.py"
"Bug Reports" = "https://github.com/mattermat/lob.py/issues"
Source = "https://github.com/mattermat/lob.py"

[tool.setuptools.packages.find]
include = ["lobpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = []

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
